@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -166,6 +166,13 @@ public class TypeDescriptorTests {
 		assertNotNull(t1.getAnnotation(ParameterAnnotation.class));
 		assertTrue(t1.hasAnnotation(ParameterAnnotation.class));
 		assertEquals(123, t1.getAnnotation(ParameterAnnotation.class).value());
+	}
+
+	@Test
+	public void getAnnotationsReturnsClonedArray() throws Exception {
+		TypeDescriptor t = new TypeDescriptor(new MethodParameter(getClass().getMethod("testAnnotatedMethod", String.class), 0));
+		t.getAnnotations()[0] = null;
+		assertNotNull(t.getAnnotations()[0]);
 	}
 
 	@Test
@@ -516,7 +523,7 @@ public class TypeDescriptorTests {
 	@Test
 	public void narrow() {
 		TypeDescriptor desc = TypeDescriptor.valueOf(Number.class);
-		Integer value = new Integer(3);
+		Integer value = Integer.valueOf(3);
 		desc = desc.narrow(value);
 		assertEquals(Integer.class, desc.getType());
 	}
@@ -524,7 +531,7 @@ public class TypeDescriptorTests {
 	@Test
 	public void elementType() {
 		TypeDescriptor desc = TypeDescriptor.valueOf(List.class);
-		Integer value = new Integer(3);
+		Integer value = Integer.valueOf(3);
 		desc = desc.elementTypeDescriptor(value);
 		assertEquals(Integer.class, desc.getType());
 	}
@@ -542,7 +549,7 @@ public class TypeDescriptorTests {
 	@Test
 	public void mapKeyType() {
 		TypeDescriptor desc = TypeDescriptor.valueOf(Map.class);
-		Integer value = new Integer(3);
+		Integer value = Integer.valueOf(3);
 		desc = desc.getMapKeyTypeDescriptor(value);
 		assertEquals(Integer.class, desc.getType());
 	}
@@ -560,7 +567,7 @@ public class TypeDescriptorTests {
 	@Test
 	public void mapValueType() {
 		TypeDescriptor desc = TypeDescriptor.valueOf(Map.class);
-		Integer value = new Integer(3);
+		Integer value = Integer.valueOf(3);
 		desc = desc.getMapValueTypeDescriptor(value);
 		assertEquals(Integer.class, desc.getType());
 	}
@@ -598,15 +605,16 @@ public class TypeDescriptorTests {
 		TypeDescriptor t12 = new TypeDescriptor(getClass().getField("mapField"));
 		assertEquals(t11, t12);
 
-		TypeDescriptor t13 = new TypeDescriptor(new MethodParameter(getClass().getMethod("testAnnotatedMethod", String.class), 0));
-		TypeDescriptor t14 = new TypeDescriptor(new MethodParameter(getClass().getMethod("testAnnotatedMethod", String.class), 0));
+		MethodParameter testAnnotatedMethod = new MethodParameter(getClass().getMethod("testAnnotatedMethod", String.class), 0);
+		TypeDescriptor t13 = new TypeDescriptor(testAnnotatedMethod);
+		TypeDescriptor t14 = new TypeDescriptor(testAnnotatedMethod);
 		assertEquals(t13, t14);
 
-		TypeDescriptor t15 = new TypeDescriptor(new MethodParameter(getClass().getMethod("testAnnotatedMethod", String.class), 0));
+		TypeDescriptor t15 = new TypeDescriptor(testAnnotatedMethod);
 		TypeDescriptor t16 = new TypeDescriptor(new MethodParameter(getClass().getMethod("testAnnotatedMethodDifferentAnnotationValue", String.class), 0));
 		assertNotEquals(t15, t16);
 
-		TypeDescriptor t17 = new TypeDescriptor(new MethodParameter(getClass().getMethod("testAnnotatedMethod", String.class), 0));
+		TypeDescriptor t17 = new TypeDescriptor(testAnnotatedMethod);
 		TypeDescriptor t18 = new TypeDescriptor(new MethodParameter(getClass().getMethod("test5", String.class), 0));
 		assertNotEquals(t17, t18);
 	}
